--- a/package.json
+++ b/package.json
@@ -15,7 +15,12 @@
     "test-watch": "npm run test -- --watch",
     "generate-mock-data": "babel-node buildScripts/generateMockData.js",
     "prestart-mock-api": "npm run generate-mock-data",
-    "start-mock-api": "json-server --watch src/api/db.json --port 3001"
+    "start-mock-api": "json-server --watch src/api/db.json --port 3001",
+    "clean-dist": "rimraf ./dist && mkdir dist",
+    "prebuild": "npm-run-all clean-dist test lint",
+    "build": "babel-node buildScripts/build.js",
+    "postbuild": "babel-node buildScripts/distServer.js",
+    "deploy": "surge ./dist"
   },
   "author": "Daniel Pöhle",
   "license": "MIT",
